# systeminformer

./: .gitignore  CMakeLists.txt  Common.Kernel.props  Common.User.props  Directory.Build.props  README.md  README.txt  SECURITY.md  SysInform.natvis  SysInform.sln  SysInform.slnx
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: cla.yml
KSysInform/: Directory.Build.props  KSysInform.inf  KSysInform.sln  KSysInform.slnx  KSysInform.vcxproj  alloc.c  alpc.c  back_trace.c  cid_table.c  cid_tracking.c  comms.c  comms_handlers.c  device.c  driver.c  dyndata.c  dynimp.c  file.c  hash.c  imgcoherency.c  informer.c  informer_debug.c  informer_file.c  informer_filenc.c  informer_fileop.c  informer_image.c  informer_object.c  informer_process.c  informer_registry.c  informer_thread.c  knowndll.c  kphobject.c  ksidll.c  ksidll.vcxproj  lsa.c  main.c  object.c  parameters.c  process.c  protection.c  resource.rc  (+6 more)
KSysInform/include/: comms.h  informer.h  informer_filep.h  kph.h  ntfill.h  pooltags.h  trace.h
KSystemInformer/: ringbuff.c
SysInform/: CMakeLists.txt  SysInform.def  SysInform.def.h  SysInform.manifest  SysInform.rc  SysInform.vcxproj  SysInform.vcxproj.filters  about.c  actions.c  admintask.c  affinity.c  anawait.c  appsup.c  chcol.c  chdlg.c  chproc.c  colmgr.c  colsetmgr.c  dbgcon.c  delayhook.c  delayload.c  devprv.c  extmgr.c  findobj.c  gdihndl.c  heapinfo.c  hidnproc.c  hndllist.c  hndlmenu.c  hndlprp.c  hndlprv.c  hndlstat.c  infodlg.c  informer.c  itemtips.c  jobprp.c  kdump.c  ksidbg.c  ksisup.c  ksyscall.c  (+75 more)
SysInform/include/: actions.h  appsup.h  colmgr.h  devprv.h  extmgr.h  extmgri.h  heapstruct.h  hidnproc.h  hndllist.h  hndlmenu.h  hndlprv.h  informer.h  ksisup.h  mainwnd.h  mainwndp.h  memlist.h  memprv.h  miniinfo.h  miniinfop.h  modlist.h  modprv.h  netlist.h  netprv.h  notifico.h  notificop.h  notiftoast.h  phapp.h  phappres.h  phfwddef.h  phplug.h  phsettings.h  phsvc.h  phsvcapi.h  phsvccl.h  phuisup.h  procgrp.h  procmtgn.h  procprp.h  procprpp.h  procprv.h  (+7 more)
SysInform/phsvc/: clapi.c  svcapi.c  svcapiport.c  svcclient.c  svcmain.c
cmake/: commands.cmake  platform.cmake  prefast.cmake  tools.cmake  tracewpp.cmake
cmake/toolchain/: clang-msvc-amd64.cmake  clang-msvc-arm64.cmake  clang-msvc-x86.cmake  clang-msvc.cmake  finalize-msvc.cmake  msvc-amd64.cmake  msvc-arm64.cmake  msvc-x86.cmake  msvc.cmake  override-msvc.cmake
kphlib/: Directory.Build.props  kphdyn.c  kphdyn.xml  kphdyndata.c  kphlib_km.vcxproj  kphmsg.c  kphmsgdyn.c  kphringbuff.c  sistatus.mc
kphlib/include/: kphapi.h  kphdyn.h  kphdyndata.h  kphlibbase.h  kphmsg.h  kphmsgdefs.h  kphmsgdyn.h  kphringbuff.h  sistatus.h
phlib/: apiimport.c  apistubs.cpp  appresolver.c  appruntime.c  avltree.c  basestring.c  basesup.c  bcd.cpp  circbuf.c  circbuf_i.h  colorbox.c  cpysave.c  data.c  directdraw.cpp  dspick.c  emenu.c  error.c  extlv.c  fastlock.c  filepool.c  filestream.c  firmware.c  format.c  format_std.cpp  global.c  graph.c  guisup.c  guisuplistview.cpp  handle.c  hexedit.c  hndlinfo.c  http.c  hvsocketcontrol.c  icotobmp.c  imgcoherency.c  json.c  kph.c  kphcomms.c  lsasup.c  mapexlf.c  (+35 more)
phlib/include/: apiimport.h  appresolver.h  appresolverp.h  bcd.h  circbuf.h  circbuf_h.h  colorbox.h  cpysave.h  dltmgr.h  dspick.h  emenu.h  exlf.h  exprodid.h  fastlock.h  filepool.h  filepoolp.h  filestream.h  filestreamp.h  graph.h  guisup.h  guisupp.h  guisupview.h  handle.h  handlep.h  hexedit.h  hexeditp.h  hndlinfo.h  hvsocketcontrol.h  json.h  kphcomms.h  kphuser.h  lsasup.h  mapimg.h  mapldr.h  ph.h  phafd.h  phbase.h  phbasesup.h  phconfig.h  phconsole.h  (+32 more)
phnt/include/: ntafd.h  ntbcd.h  ntdbg.h  ntexapi.h  ntgdi.h  ntimage.h  ntioapi.h  ntkeapi.h  ntldr.h  ntlpcapi.h  ntmisc.h  ntmmapi.h  ntnls.h  ntobapi.h  ntpebteb.h  ntpfapi.h  ntpnpapi.h  ntpoapi.h  ntpsapi.h  ntregapi.h  ntrtl.h  ntsam.h  ntseapi.h  ntsmss.h  ntsxs.h  nttmapi.h  nttp.h  ntuser.h  ntwmi.h  ntwow64.h  ntxcapi.h  phnt.h  phnt_ntdef.h  phnt_windows.h  smbios.h  subprocesstag.h  usermgr.h  winsta.h
plugins/: Plugins.props
plugins/DotNetTools/: asmpage.c  clretw.h  clrsup.c  clrsup.h  counters.c  dn.h  main.c  perfpage.c  stackext.c  svcext.c  svcext.h  treeext.c
plugins/ExtendedNotifications/: ExtendedNotifications.rc  extnoti.h  filelog.c  main.c
plugins/ExtendedServices/: depend.c  extsrv.h  main.c  other.c  recovery.c  srvprgrs.c  svcpkg.c  svcpnp.c  trigger.c  triggpg.c
plugins/ExtendedTools/: ExtendedTools.rc  counters.c  disktab.c  disktabp.h  efi_guid_list.h  etwdisk.c  etwmini.c  etwmini.h  etwmon.c  etwmon.h  etwprprp.c  etwstat.c  etwsys.c  etwsys.h  exttools.h  firmware.c  firmware_editor.c  framemon.cpp  framemon.h  frameprp.c  fwmon.c  fwtab.c  gpudetails.c  gpumini.c  gpumini.h  gpumon.c  gpumon.h  gpunodes.c  gpuprprp.c  gpusys.c  gpusys.h  iconext.c  main.c  modsrv.c  namedpipes.c  npudetails.c  npumini.c  npumini.h  npumon.c  npumon.h  (+25 more)
plugins/HardwareDevices/: adapter.c  deviceprops.c  devices.h  (+25 more)
tools/: Directory.Build.props
(+183 files in other folders)
